--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/vcat?useSSL=false
 
 # Username
-spring.datasource.username=root
+spring.datasource.username=vcat
 
 # Password
-spring.datasource.password=admin
+spring.datasource.password=vcat
 
 # Define the database platform
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
@@ -34,3 +34,7 @@ logging.level.=error
 #VCAT configurations
 
 selenium.driver=C://vcat//chromedriver.exe
+
+
+
+server.port=8081
